# CSV_TO_DB_PY

./: .gitignore  LICENSE.md  README.md  mainConfig.json.template  pyproject.toml
.github/workflows/: workflow.yaml
csv_to_db_py/: __init__.py  config.py  logger.py  main.py
csv_to_db_py/db_connectors/: __init__.py  base.py  mssql.py  mysql.py  oracle.py  postgres.py
csv_to_db_py/utils/: __init__.py  cleaned_csv.py  csv_loader.py  table_creator.py
